--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 <html>
 	<head>
 		<title>Prashant's Profile</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/prashant.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- Open Graph Tags-->
 		<meta property="og:site_name" content="Process Engineer Water & Wastewater Profile" />
-		<meta property=“og:title” content="Process Engineer Water & Wastewater Profile" />
+		<meta property="og:title" content="Process Engineer Water & Wastewater Profile" />
 		<meta property="og:description" content="I have experience in water treatment system project planning and construction oversight of India's largest 20 MLD Tannery common effluent treatment project" />
 		<meta property="og:url" content="https://iprashant.xyz" />
 		<meta property="og:image" content="https://iprashant.xyz/images/pic001.jpeg" />
 		<meta property="og:type" content="Water Engineer Profile" />
 		<meta property="twitter:card" content="summary_large_image" />
-		
+		<!--Web Page Property Begin-->
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/prashant.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		
 	</head>
